# rules_cue

./: .gitignore  BUILD.bazel  WORKSPACE.bazel  deps.bzl  go.mod  go.sum
cue/: BUILD.bazel  cmd.bzl  cmd.sh.tpl  cue-run-from-archived-runfiles  cue-run-from-runfiles  cue.bzl  deps.bzl
cue/private/tools/cue/: toolchain.bzl
gazelle/cue/: BUILD.bazel  config.go  cue.go  generate.go  resolve.go
test/testdata/gazelle/: BUILD.bazel  app.cue
test/testdata/gazelle/colon_imports/: BUILD.bazel  colon_imports.cue
test/testdata/gazelle/cue.mod/: BUILD.bazel  module.cue
test/testdata/gazelle/cue.mod/pkg/github.com/abcue/kue/: BUILD.bazel
test/testdata/gazelle/cue.mod/pkg/github.com/abcue/tool/: BUILD.bazel  tool.cue
test/testdata/gazelle/cue.mod/pkg/github.com/abcue/tue/: BUILD.bazel  tue.cue
test/testdata/gazelle/environments/: BUILD.bazel  dev.cue  prod.cue
test/testdata/hello_world/: BUILD.bazel  hello_tool.cue
