load("@bazel_gazelle//:def.bzl", "DEFAULT_LANGUAGES", "gazelle", "gazelle_binary")

gazelle_binary(
    name = "gazelle_binary",
    languages = DEFAULT_LANGUAGES + ["@rules_cue//gazelle/cue"],
    visibility = ["//visibility:public"],
)

# gazelle:prefix github.com/seh/rules_cue
gazelle(
    name = "gazelle",
    gazelle = "//:gazelle_binary",
)

gazelle(
    name = "gazelle-update-godeps",
    args = [
        "-from_file=go.mod",
        "-to_macro=deps.bzl%go_dependencies",
        "-prune",
    ],
    command = "update-repos",
)
