#gazelle:prefix example.com

load("@rules_cue//cue:cue.bzl", "cue_instance")

cue_instance(
    name = "gazelle_cue_instance",
    package_name = "gazelle",
    srcs = ["app.cue"],
    ancestor = "//test/testdata/gazelle/cue.mod:cue.mod",
    visibility = ["//visibility:public"],
    deps = ["//test/testdata/gazelle/cue.mod/gen/k8s.io/api/apps/v1:v1_cue_instance"],
)
