load("@rules_cue//cue:cue.bzl", "cue_exported_files", "cue_exported_standalone_files")

cue_exported_standalone_files(
    name = "module_exported",
    srcs = ["module.cue"],
    visibility = ["//visibility:__subpackages__"],
)

cue_exported_files(
    name = "module_exported_files",
    module = "",
    visibility = ["//visibility:__subpackages__"],
)
