load("@rules_cue//cue:cue.bzl", "cue_exported_standalone_files", "cue_module")

cue_exported_standalone_files(
    name = "module_exported",
    srcs = ["module.cue"],
    visibility = ["//visibility:__subpackages__"],
)

cue_module(
    name = "cue.mod",
    visibility = ["//visibility:public"],
)
