load("@rules_cue//cue:cue.bzl", "cue_exported_files", "cue_module")

cue_module(
    name = "cue.mod",
    visibility = ["//visibility:public"],
)

cue_exported_files(
    name = "module_cue_exported_files",
    srcs = ["module.cue"],
    module = "//test/testdata/gazelle/cue.mod:cue.mod",
    output_format = "json",
    visibility = ["//visibility:public"],
)
