load("@rules_cue//cue:cue.bzl", "cue_exported_files")

cue_exported_files(
    name = "dev_cue_exported_files",
    srcs = ["dev.cue"],
    module = "//test/testdata/gazelle/cue.mod:cue.mod",
    output_format = "json",
    visibility = ["//visibility:public"],
    deps = ["//test/testdata/gazelle:gazelle_cue_instance"],
)

cue_exported_files(
    name = "prod_cue_exported_files",
    srcs = ["prod.cue"],
    module = "//test/testdata/gazelle/cue.mod:cue.mod",
    output_format = "json",
    visibility = ["//visibility:public"],
    deps = ["//test/testdata/gazelle:gazelle_cue_instance"],
)
