load("@rules_cue//cue:cue.bzl", "cue_exported_files", "cue_exported_instance", "cue_instance")

cue_instance(
    name = "cue_tool_instance",
    package_name = "tool",
    srcs = ["tool.cue"],
    ancestor = "//test/testdata/gazelle/cue.mod:cue.mod",
    visibility = ["//visibility:public"],
)

cue_exported_instance(
    name = "cue_tool_instance_exported",
    instance = "cue_tool_instance",
    visibility = ["//visibility:public"],
)

cue_exported_files(
    name = "cue_tool_exported_files",
    module = "tool",
    visibility = ["//visibility:public"],
)
