load("@rules_cue//cue:cue.bzl", "cue_exported_files", "cue_instance")

cue_instance(
    name = "cue_tool_instance",
    package_name = "tool",
    srcs = ["tool.cue"],
    ancestor = "//test/testdata/gazelle/cue.mod:cue.mod",
    visibility = ["//visibility:public"],
)

cue_exported_files(
    name = "tool_cue_exported_files",
    srcs = ["tool.cue"],
    module = "//test/testdata/gazelle/cue.mod:cue.mod",
    output_format = "json",
    visibility = ["//visibility:public"],
)
