load("@rules_cue//cue:cue.bzl", "cue_consolidated_instance", "cue_instance")

cue_instance(
    name = "tool_cue_instance",
    package_name = "tool",
    srcs = ["tool.cue"],
    ancestor = "//test/testdata/gazelle/cue.mod:cue.mod",
    visibility = ["//visibility:public"],
)

cue_consolidated_instance(
    name = "tool_cue_def",
    instance = ":tool_cue_instance",
    output_format = "cue",
    visibility = ["//visibility:public"],
)
