load("@rules_cue//cue:cue.bzl", "cue_exported_files", "cue_exported_instance", "cue_instance")

cue_instance(
    name = "cue_tue_instance",
    package_name = "tue",
    srcs = ["tue.cue"],
    ancestor = "//test/testdata/gazelle/cue.mod:cue.mod",
    visibility = ["//visibility:public"],
)

cue_exported_instance(
    name = "cue_tue_instance_exported",
    instance = ":cue_tue_instance",
    output_format = "json",
    visibility = ["//visibility:public"],
)

cue_exported_instance(
    name = "tue_cue_exported_instance",
    instance = ":cue_tue_instance",
    output_format = "json",
    visibility = ["//visibility:public"],
)

cue_exported_files(
    name = "tue_cue_exported_files",
    srcs = ["tue.cue"],
    module = "//test/testdata/gazelle/cue.mod:cue.mod",
    output_format = "json",
    visibility = ["//visibility:public"],
)
