load("@rules_cue//cue:cue.bzl", "cue_consolidated_instance", "cue_exported_instance", "cue_instance")

cue_instance(
    name = "tue_cue_instance",
    package_name = "tue",
    srcs = ["tue.cue"],
    ancestor = "//test/testdata/gazelle/cue.mod:cue.mod",
    visibility = ["//visibility:public"],
    deps = ["//test/testdata/gazelle/cue.mod/pkg/github.com/abcue/tool:tool_cue_instance"],
)

cue_consolidated_instance(
    name = "tue_cue_def",
    instance = ":tue_cue_instance",
    output_format = "cue",
    visibility = ["//visibility:public"],
)

cue_exported_instance(
    name = "tue_cue_instance_exported",
    instance = ":tue_cue_instance",
    output_format = "json",
    visibility = ["//visibility:public"],
)
